[gd_scene load_steps=9 format=3 uid="uid://b1fi243yubh32"]

[ext_resource type="Texture2D" uid="uid://pca3rgpsi0if" path="res://art/类土豆兄弟/bg.png" id="1_onsix"]
[ext_resource type="Script" path="res://bg_map/bg_map.gd" id="1_yfsku"]
[ext_resource type="PackedScene" uid="uid://cluu4e5mn6jnm" path="res://player/player.tscn" id="3_xkf8v"]
[ext_resource type="PackedScene" uid="uid://6pte6yuih5f8" path="res://enemy/now_enemies.tscn" id="4_rywft"]
[ext_resource type="PackedScene" uid="uid://dmwsmgfda34bv" path="res://ui/game_ui.tscn" id="5_gnfnr"]
[ext_resource type="PackedScene" uid="uid://bp08hib3pvd1s" path="res://scenes/scene_update/scene_update.tscn" id="6_uk2vx"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_mgjyg"]
texture = ExtResource("1_onsix")
18:0/0 = 0
18:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
18:0/0/physics_layer_0/angular_velocity = 0.0
18:1/0 = 0
18:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
18:1/0/physics_layer_0/angular_velocity = 0.0
14:0/0 = 0
14:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
14:0/0/physics_layer_0/angular_velocity = 0.0
14:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, -1.625, -8, -0.875)
14:0/0/custom_data_0 = true
13:1/0 = 0
13:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
13:1/0/physics_layer_0/angular_velocity = 0.0
13:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -1.375, -8, -1.625, 8, -8, 8)
13:1/0/custom_data_0 = true
14:2/0 = 0
14:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
14:2/0/physics_layer_0/angular_velocity = 0.0
14:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 2, 8, 2.75, 8, 8, -8, 8)
14:2/0/custom_data_0 = true
14:1/0 = 0
14:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
14:1/0/physics_layer_0/angular_velocity = 0.0
15:1/0 = 0
15:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
15:1/0/physics_layer_0/angular_velocity = 0.0
15:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(1.5, -8, 8, -8, 8, 8, 2.625, 8)
15:1/0/custom_data_0 = true
13:0/0 = 0
13:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
13:0/0/physics_layer_0/angular_velocity = 0.0
13:2/0 = 0
13:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
13:2/0/physics_layer_0/angular_velocity = 0.0
15:0/0 = 0
15:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
15:0/0/physics_layer_0/angular_velocity = 0.0
15:2/0 = 0
15:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
15:2/0/physics_layer_0/angular_velocity = 0.0
16:0/0 = 0
16:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
16:0/0/physics_layer_0/angular_velocity = 0.0
16:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(3.375, 3.25, 8, 1.875, 8, 8, 2.5, 8)
16:0/0/custom_data_0 = true
16:1/0 = 0
16:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
16:1/0/physics_layer_0/angular_velocity = 0.0
16:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(1.5, -8, 8, -8, 8, 8, 8, -0.25)
16:1/0/custom_data_0 = true
17:1/0 = 0
17:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
17:1/0/physics_layer_0/angular_velocity = 0.0
17:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -2.875, -8, -2.5, -1.25, -8, -1.25)
17:1/0/custom_data_0 = true
17:0/0 = 0
17:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
17:0/0/physics_layer_0/angular_velocity = 0.0
17:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 1.75, -3.25, 2.5, -0.25, 8, -8, 8)
17:0/0/custom_data_0 = true
9:3/0 = 0
9:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:3/0/physics_layer_0/angular_velocity = 0.0
8:3/0 = 0
8:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:3/0/physics_layer_0/angular_velocity = 0.0
9:4/0 = 0
9:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:4/0/physics_layer_0/angular_velocity = 0.0
8:4/0 = 0
8:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:4/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSet" id="TileSet_ee6r0"]
physics_layer_0/collision_layer = 2
physics_layer_0/collision_mask = 0
custom_data_layer_0/name = "isWall"
custom_data_layer_0/type = 1
sources/0 = SubResource("TileSetAtlasSource_mgjyg")

[node name="bg_map" type="Node2D"]
script = ExtResource("1_yfsku")

[node name="TileMap" type="TileMap" parent="." groups=["map"]]
scale = Vector2(6, 6)
tile_set = SubResource("TileSet_ee6r0")
format = 2
layer_0/name = "bg1"
layer_0/tile_data = PackedInt32Array(0, 1179648, 0, 65537, 1179648, 0, 131074, 1179648, 0, 196611, 1179648, 0, 262148, 1179648, 0, 262149, 1179648, 0, 327686, 1179648, 0, 327687, 1179648, 0, 393224, 1179648, 0, 393225, 1179648, 0, 458762, 1179648, 0, 458763, 1179648, 0, 458764, 1179648, 0, 458765, 1179648, 0, 458766, 1179648, 0, 524303, 1179648, 0, 524304, 1179648, 0, 524305, 1179648, 0, 589842, 1179648, 0, 589843, 1179648, 0, 589844, 1179648, 0, 655380, 1179648, 0, 720917, 1179648, 0, 786454, 1179648, 0, 851990, 1179648, 0, 786453, 1179648, 0, 786452, 1179648, 0, 720916, 1179648, 0, 720915, 1179648, 0, 655379, 1179648, 0, 655378, 1179648, 0, 589841, 1179648, 0, 393228, 1179648, 0, 393227, 1179648, 0, 393226, 1179648, 0, 327689, 1179648, 0, 327688, 1179648, 0, 262151, 1179648, 0, 262150, 1179648, 0, 196614, 1179648, 0, 196613, 1179648, 0, 131077, 1179648, 0, 131076, 1179648, 0, 131075, 1179648, 0, 65539, 1179648, 0, 65538, 1179648, 0, 1, 1179648, 0, 65536, 1179648, 0, 131072, 1179648, 0, 196608, 1179648, 0, 262144, 1179648, 0, 327680, 1179648, 0, 393216, 1179648, 0, 458752, 1179648, 0, 524288, 1179648, 0, 589824, 1179648, 0, 655360, 1179648, 0, 720896, 1179648, 0, 786432, 1179648, 0, 851968, 1179648, 0, 917504, 1179648, 0, 983040, 1179648, 0, 1048576, 1179648, 0, 1114112, 1179648, 0, 1179648, 1179648, 0, 1245184, 1179648, 0, 1310720, 1179648, 0, 131073, 1179648, 0, 196609, 1179648, 0, 262145, 1179648, 0, 327681, 1179648, 0, 393217, 1179648, 0, 458753, 1179648, 0, 524289, 1179648, 0, 589825, 1179648, 0, 655361, 1179648, 0, 720897, 1179648, 0, 786433, 1179648, 0, 851969, 1179648, 0, 917505, 1179648, 0, 983041, 1179648, 0, 1048577, 1179648, 0, 1114113, 1179648, 0, 1179649, 1179648, 0, 1245185, 1179648, 0, 1310721, 1179648, 0, 2, 1179648, 0, 196610, 1179648, 0, 262146, 1179648, 0, 327682, 1179648, 0, 393218, 1179648, 0, 458754, 1179648, 0, 524290, 1179648, 0, 589826, 1179648, 0, 655362, 1179648, 0, 720898, 1179648, 0, 786434, 1179648, 0, 851970, 1179648, 0, 917506, 1179648, 0, 983042, 1179648, 0, 1048578, 1179648, 0, 1114114, 1179648, 0, 1179650, 1179648, 0, 1245186, 1179648, 0, 1310722, 1179648, 0, 3, 1179648, 0, 262147, 1179648, 0, 327683, 1179648, 0, 393219, 1179648, 0, 458755, 1179648, 0, 524291, 1179648, 0, 589827, 1179648, 0, 655363, 1179648, 0, 720899, 1179648, 0, 786435, 1179648, 0, 851971, 1179648, 0, 917507, 1179648, 0, 983043, 1179648, 0, 1048579, 1179648, 0, 1114115, 1179648, 0, 1179651, 1179648, 0, 1245187, 1179648, 0, 1310723, 1179648, 0, 4, 1179648, 0, 65540, 1179648, 0, 196612, 1179648, 0, 327684, 1179648, 0, 393220, 1179648, 0, 458756, 1179648, 0, 524292, 1179648, 0, 589828, 1179648, 0, 655364, 1179648, 0, 720900, 1179648, 0, 786436, 1179648, 0, 851972, 1179648, 0, 917508, 1179648, 0, 983044, 1179648, 0, 1048580, 1179648, 0, 1114116, 1179648, 0, 1179652, 1179648, 0, 1245188, 1179648, 0, 1310724, 1179648, 0, 5, 1179648, 0, 65541, 1179648, 0, 327685, 1179648, 0, 393221, 1179648, 0, 458757, 1179648, 0, 524293, 1179648, 0, 589829, 1179648, 0, 655365, 1179648, 0, 720901, 1179648, 0, 786437, 1179648, 0, 851973, 1179648, 0, 917509, 1179648, 0, 983045, 1179648, 0, 1048581, 1179648, 0, 1114117, 1179648, 0, 1179653, 1179648, 0, 1245189, 1179648, 0, 1310725, 1179648, 0, 6, 1179648, 0, 65542, 1179648, 0, 131078, 1179648, 0, 393222, 1179648, 0, 458758, 1179648, 0, 524294, 1179648, 0, 589830, 1179648, 0, 655366, 1179648, 0, 720902, 1179648, 0, 786438, 1179648, 0, 851974, 1179648, 0, 917510, 1179648, 0, 983046, 1179648, 0, 1048582, 1179648, 0, 1114118, 1179648, 0, 1179654, 1179648, 0, 1245190, 1179648, 0, 1310726, 1179648, 0, 7, 1179648, 0, 65543, 1179648, 0, 131079, 1179648, 0, 196615, 1179648, 0, 393223, 1179648, 0, 458759, 1179648, 0, 524295, 1179648, 0, 589831, 1179648, 0, 655367, 1179648, 0, 720903, 1179648, 0, 786439, 1179648, 0, 851975, 1179648, 0, 917511, 1179648, 0, 983047, 1179648, 0, 1048583, 1179648, 0, 1114119, 1179648, 0, 1179655, 1179648, 0, 1245191, 1179648, 0, 1310727, 1179648, 0, 8, 1179648, 0, 65544, 1179648, 0, 131080, 1179648, 0, 196616, 1179648, 0, 262152, 1179648, 0, 458760, 1179648, 0, 524296, 1179648, 0, 589832, 1179648, 0, 655368, 1179648, 0, 720904, 1179648, 0, 786440, 1179648, 0, 851976, 1179648, 0, 917512, 1179648, 0, 983048, 1179648, 0, 1048584, 1179648, 0, 1114120, 1179648, 0, 1179656, 1179648, 0, 1245192, 1179648, 0, 1310728, 1179648, 0, 9, 1179648, 0, 65545, 1179648, 0, 131081, 1179648, 0, 196617, 1179648, 0, 262153, 1179648, 0, 458761, 1179648, 0, 524297, 1179648, 0, 589833, 1179648, 0, 655369, 1179648, 0, 720905, 1179648, 0, 786441, 1179648, 0, 851977, 1179648, 0, 917513, 1179648, 0, 983049, 1179648, 0, 1048585, 1179648, 0, 1114121, 1179648, 0, 1179657, 1179648, 0, 1245193, 1179648, 0, 1310729, 1179648, 0, 10, 1179648, 0, 65546, 1179648, 0, 131082, 1179648, 0, 196618, 1179648, 0, 262154, 1179648, 0, 327690, 1179648, 0, 524298, 1179648, 0, 589834, 1179648, 0, 655370, 1179648, 0, 720906, 1179648, 0, 786442, 1179648, 0, 851978, 1179648, 0, 917514, 1179648, 0, 983050, 1179648, 0, 1048586, 1179648, 0, 1114122, 1179648, 0, 1179658, 1179648, 0, 1245194, 1179648, 0, 1310730, 1179648, 0, 11, 1179648, 0, 65547, 1179648, 0, 131083, 1179648, 0, 196619, 1179648, 0, 262155, 1179648, 0, 327691, 1179648, 0, 524299, 1179648, 0, 589835, 1179648, 0, 655371, 1179648, 0, 720907, 1179648, 0, 786443, 1179648, 0, 851979, 1179648, 0, 917515, 1179648, 0, 983051, 1179648, 0, 1048587, 1179648, 0, 1114123, 1179648, 0, 1179659, 1179648, 0, 1245195, 1179648, 0, 1310731, 1179648, 0, 12, 1179648, 0, 65548, 1179648, 0, 131084, 1179648, 0, 196620, 1179648, 0, 262156, 1179648, 0, 327692, 1179648, 0, 524300, 1179648, 0, 589836, 1179648, 0, 655372, 1179648, 0, 720908, 1179648, 0, 786444, 1179648, 0, 851980, 1179648, 0, 917516, 1179648, 0, 983052, 1179648, 0, 1048588, 1179648, 0, 1114124, 1179648, 0, 1179660, 1179648, 0, 1245196, 1179648, 0, 1310732, 1179648, 0, 13, 1179648, 0, 65549, 1179648, 0, 131085, 1179648, 0, 196621, 1179648, 0, 262157, 1179648, 0, 327693, 1179648, 0, 393229, 1179648, 0, 524301, 1179648, 0, 589837, 1179648, 0, 655373, 1179648, 0, 720909, 1179648, 0, 786445, 1179648, 0, 851981, 1179648, 0, 917517, 1179648, 0, 983053, 1179648, 0, 1048589, 1179648, 0, 1114125, 1179648, 0, 1179661, 1179648, 0, 1245197, 1179648, 0, 1310733, 1179648, 0, 14, 1179648, 0, 65550, 1179648, 0, 131086, 1179648, 0, 196622, 1179648, 0, 262158, 1179648, 0, 327694, 1179648, 0, 393230, 1179648, 0, 524302, 1179648, 0, 589838, 1179648, 0, 655374, 1179648, 0, 720910, 1179648, 0, 786446, 1179648, 0, 851982, 1179648, 0, 917518, 1179648, 0, 983054, 1179648, 0, 1048590, 1179648, 0, 1114126, 1179648, 0, 1179662, 1179648, 0, 1245198, 1179648, 0, 1310734, 1179648, 0, 15, 1179648, 0, 65551, 1179648, 0, 131087, 1179648, 0, 196623, 1179648, 0, 262159, 1179648, 0, 327695, 1179648, 0, 393231, 1179648, 0, 458767, 1179648, 0, 589839, 1179648, 0, 655375, 1179648, 0, 720911, 1179648, 0, 786447, 1179648, 0, 851983, 1179648, 0, 917519, 1179648, 0, 983055, 1179648, 0, 1048591, 1179648, 0, 1114127, 1179648, 0, 1179663, 1179648, 0, 1245199, 1179648, 0, 1310735, 1179648, 0, 16, 1179648, 0, 65552, 1179648, 0, 131088, 1179648, 0, 196624, 1179648, 0, 262160, 1179648, 0, 327696, 1179648, 0, 393232, 1179648, 0, 458768, 1179648, 0, 589840, 1179648, 0, 655376, 1179648, 0, 720912, 1179648, 0, 786448, 1179648, 0, 851984, 1179648, 0, 917520, 1179648, 0, 983056, 1179648, 0, 1048592, 1179648, 0, 1114128, 1179648, 0, 1179664, 1179648, 0, 1245200, 1179648, 0, 1310736, 1179648, 0, 17, 1179648, 0, 65553, 1179648, 0, 131089, 1179648, 0, 196625, 1179648, 0, 262161, 1179648, 0, 327697, 1179648, 0, 393233, 1179648, 0, 458769, 1179648, 0, 655377, 1179648, 0, 720913, 1179648, 0, 786449, 1179648, 0, 851985, 1179648, 0, 917521, 1179648, 0, 983057, 1179648, 0, 1048593, 1179648, 0, 1114129, 1179648, 0, 1179665, 1179648, 0, 1245201, 1179648, 0, 1310737, 1179648, 0, 18, 1179648, 0, 65554, 1179648, 0, 131090, 1179648, 0, 196626, 1179648, 0, 262162, 1179648, 0, 327698, 1179648, 0, 393234, 1179648, 0, 458770, 1179648, 0, 524306, 1179648, 0, 720914, 1179648, 0, 786450, 1179648, 0, 851986, 1179648, 0, 917522, 1179648, 0, 983058, 1179648, 0, 1048594, 1179648, 0, 1114130, 1179648, 0, 1179666, 1179648, 0, 1245202, 1179648, 0, 1310738, 1179648, 0, 19, 1179648, 0, 65555, 1179648, 0, 131091, 1179648, 0, 196627, 1179648, 0, 262163, 1179648, 0, 327699, 1179648, 0, 393235, 1179648, 0, 458771, 1179648, 0, 524307, 1179648, 0, 786451, 1179648, 0, 851987, 1179648, 0, 917523, 1179648, 0, 983059, 1179648, 0, 1048595, 1179648, 0, 1114131, 1179648, 0, 1179667, 1179648, 0, 1245203, 1179648, 0, 1310739, 1179648, 0, 20, 1179648, 0, 65556, 1179648, 0, 131092, 1179648, 0, 196628, 1179648, 0, 262164, 1179648, 0, 327700, 1179648, 0, 393236, 1179648, 0, 458772, 1179648, 0, 524308, 1179648, 0, 851988, 1179648, 0, 917524, 1179648, 0, 983060, 1179648, 0, 1048596, 1179648, 0, 1114132, 1179648, 0, 1179668, 1179648, 0, 1245204, 1179648, 0, 1310740, 1179648, 0, 21, 1179648, 0, 65557, 1179648, 0, 131093, 1179648, 0, 196629, 1179648, 0, 262165, 1179648, 0, 327701, 1179648, 0, 393237, 1179648, 0, 458773, 1179648, 0, 524309, 1179648, 0, 589845, 1179648, 0, 655381, 1179648, 0, 851989, 1179648, 0, 917525, 1179648, 0, 983061, 1179648, 0, 1048597, 1179648, 0, 1114133, 1179648, 0, 1179669, 1179648, 0, 1245205, 1179648, 0, 1310741, 1179648, 0, 22, 1179648, 0, 65558, 1179648, 0, 131094, 1179648, 0, 196630, 1179648, 0, 262166, 1179648, 0, 327702, 1179648, 0, 393238, 1179648, 0, 458774, 1179648, 0, 524310, 1179648, 0, 589846, 1179648, 0, 655382, 1179648, 0, 720918, 1179648, 0, 917526, 1179648, 0, 983062, 1179648, 0, 1048598, 1179648, 0, 1114134, 1179648, 0, 1179670, 1179648, 0, 1245206, 1179648, 0, 1310742, 1179648, 0, 23, 1179648, 0, 65559, 1179648, 0, 131095, 1179648, 0, 196631, 1179648, 0, 262167, 1179648, 0, 327703, 1179648, 0, 393239, 1179648, 0, 458775, 1179648, 0, 524311, 1179648, 0, 589847, 1179648, 0, 655383, 1179648, 0, 720919, 1179648, 0, 786455, 1179648, 0, 851991, 1179648, 0, 917527, 1179648, 0, 983063, 1179648, 0, 1048599, 1179648, 0, 1114135, 1179648, 0, 1179671, 1179648, 0, 1245207, 1179648, 0, 1310743, 1179648, 0, 24, 1179648, 0, 65560, 1179648, 0, 131096, 1179648, 0, 196632, 1179648, 0, 262168, 1179648, 0, 327704, 1179648, 0, 393240, 1179648, 0, 458776, 1179648, 0, 524312, 1179648, 0, 589848, 1179648, 0, 655384, 1179648, 0, 720920, 1179648, 0, 786456, 1179648, 0, 851992, 1179648, 0, 917528, 1179648, 0, 983064, 1179648, 0, 1048600, 1179648, 0, 1114136, 1179648, 0, 1179672, 1179648, 0, 1245208, 1179648, 0, 1310744, 1179648, 0, 25, 1179648, 0, 65561, 1179648, 0, 131097, 1179648, 0, 196633, 1179648, 0, 262169, 1179648, 0, 327705, 1179648, 0, 393241, 1179648, 0, 458777, 1179648, 0, 524313, 1179648, 0, 589849, 1179648, 0, 655385, 1179648, 0, 720921, 1179648, 0, 786457, 1179648, 0, 851993, 1179648, 0, 917529, 1179648, 0, 983065, 1179648, 0, 1048601, 1179648, 0, 1114137, 1179648, 0, 1179673, 1179648, 0, 1245209, 1179648, 0, 1310745, 1179648, 0)
layer_1/name = "bg2"
layer_1/z_index = 1
layer_1/tile_data = PackedInt32Array(1048576, 1179648, 1, 917506, 1179648, 1, 3, 1179648, 1, 720899, 1179648, 1, 786436, 1179648, 1, 720901, 1179648, 1, 917510, 1179648, 1, 7, 1179648, 1, 393223, 1179648, 1, 655370, 1179648, 1, 720906, 1179648, 1, 196619, 1179648, 1, 1179659, 1179648, 1, 131085, 1179648, 1, 1245197, 1179648, 1, 1245198, 1179648, 1, 327695, 1179648, 1, 393231, 1179648, 1, 655375, 1179648, 1, 786448, 1179648, 1, 1179664, 1179648, 1, 458769, 1179648, 1, 851985, 1179648, 1, 65557, 1179648, 1, 1179669, 1179648, 1, 786454, 1179648, 1, 1114135, 1179648, 1, 1310744, 1179648, 1, 1245209, 1179648, 1)
layer_2/name = "wall"
layer_2/z_index = 2
layer_2/tile_data = PackedInt32Array(65535, 983040, 1, 131071, 983040, 1, 196607, 983040, 1, 262143, 983040, 1, 327679, 983040, 1, 393215, 983040, 1, 458751, 983040, 1, 524287, 983040, 1, 589823, 983040, 1, 655359, 983040, 1, 720895, 983040, 1, 786431, 983040, 1, 851967, 983040, 1, 917503, 983040, 1, 983039, 983040, 1, 1048575, 983040, 1, 1114111, 983040, 1, 1179647, 983040, 1, 1245183, 983040, 1, 1310719, 983040, 1, 1376255, 983040, 1, 1376256, 917504, 0, 1376257, 917504, 0, 1376258, 917504, 0, 1376259, 917504, 0, 1376260, 917504, 0, 1376261, 917504, 0, 1376262, 917504, 0, 1376263, 917504, 0, 1376264, 917504, 0, 1376265, 917504, 0, 1376266, 917504, 0, 1376267, 917504, 0, 1376268, 917504, 0, 1376269, 917504, 0, 1376270, 917504, 0, 1376271, 917504, 0, 1376272, 917504, 0, 1376273, 917504, 0, 1376274, 917504, 0, 1376275, 917504, 0, 1376276, 917504, 0, 1376277, 917504, 0, 1376278, 917504, 0, 1376279, 917504, 0, 1376280, 917504, 0, 1376281, 917504, 0, 26, 851968, 1, 65562, 851968, 1, 131098, 851968, 1, 196634, 851968, 1, 262170, 851968, 1, 327706, 851968, 1, 393242, 851968, 1, 458778, 851968, 1, 524314, 851968, 1, 589850, 851968, 1, 655386, 851968, 1, 720922, 851968, 1, 786458, 851968, 1, 851994, 851968, 1, 917530, 851968, 1, 983066, 851968, 1, 1048602, 851968, 1, 1114138, 851968, 1, 1179674, 851968, 1, 1245210, 851968, 1, 1310746, 851968, 1, -65511, 917504, 2, -65512, 917504, 2, -65513, 917504, 2, -65514, 917504, 2, -65515, 917504, 2, -65516, 917504, 2, -65517, 917504, 2, -65518, 917504, 2, -65519, 917504, 2, -65520, 917504, 2, -65521, 917504, 2, -65522, 917504, 2, -65523, 917504, 2, -65524, 917504, 2, -65525, 917504, 2, -65526, 917504, 2, -65527, 917504, 2, -65528, 917504, 2, -65529, 917504, 2, -65530, 917504, 2, -65531, 917504, 2, -65532, 917504, 2, -65533, 917504, 2, -65534, 917504, 2, -65535, 917504, 2, -65536, 917504, 2, -65510, 1114112, 0, -1, 1048576, 0, 1441791, 1048576, 1, 1376282, 1114112, 1)

[node name="player" parent="." instance=ExtResource("3_xkf8v")]
position = Vector2(677, 745)

[node name="now_enemies" parent="." instance=ExtResource("4_rywft")]

[node name="game_ui" parent="." instance=ExtResource("5_gnfnr")]

[node name="scene_update" parent="." instance=ExtResource("6_uk2vx")]
visible = false

[connection signal="round_stop" from="game_ui" to="." method="_on_game_ui_round_stop"]
[connection signal="continue_game" from="scene_update" to="." method="_on_scene_update_continue_game"]
